--- a/client/index.html
+++ b/client/index.html
@@ -476,11 +476,13 @@
                     }
                 }
 
-                console.log(data[idx]);
+                let timemillisec = Date.parse(data[idx].timestamp) + 7*60*60*1000;
+                time_box.textContent = new Date(timemillisec).toString().slice(4,-24);
+
                 sender_box.textContent = sender_nickname;
                 message_box.textContent = data[idx].message;
                 message_box.classList.add("w3-card", "w3-blue", "w3-padding", "w3-round-large");
-                time_box.textContent = data[idx].timestamp.slice(0,-3);
+                
                 message_zone.appendChild(sender_box);
                 message_zone.appendChild(message_box);
                 message_zone.appendChild(time_box);
