--- a/client/index.html
+++ b/client/index.html
@@ -303,8 +303,9 @@
                     to_logout_btn.style.display = "none";
                 }
             });
-
-            
+            document.getElementById("display-message").style.backgroundColor = "white";
+            document.getElementById("message").style.backgroundColor = "white";
+            document.getElementById("message-bottom").style.backgroundColor = "white";
         });
 
         document.getElementById("send-btn").addEventListener('click',()=>{
