--- a/client/index.html
+++ b/client/index.html
@@ -30,7 +30,7 @@
                   <label><b>Password</b></label>
                   <input id="login-p" class="w3-input w3-border w3-margin-bottom" type="password" placeholder="Enter Password" required>
                   <label id="login-msg"></label>
-                  <button id="login-btn" class="w3-button w3-block w3-green w3-section w3-padding" type="submit">Login</button>
+                  <button id="login-btn" class="w3-button w3-block w3-teal w3-section w3-padding" type="submit">Login</button>
                 </div>
               </div>
             </div>
@@ -55,7 +55,7 @@
                   <label><b>Nickname</b></label>
                   <input id="regist-n" class="w3-input w3-border" type="text" placeholder="Enter Nickname" name="nckname" required>
                   <label id="regist-msg"></label>
-                  <button id="regist-btn" class="w3-button w3-block w3-green w3-section w3-padding">Register</button>
+                  <button id="regist-btn" class="w3-button w3-block w3-teal w3-section w3-padding">Register</button>
                 </div>
               </div>
             </div>
@@ -76,7 +76,7 @@
                   <label><b>New Nickname</b></label>
                   <input id="nickname-n" class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter New Nickname" name="nckname" required>
                   <label id="nick-msg"></label>
-                  <button id="nick-btn" class="w3-button w3-block w3-green w3-section w3-padding" type="submit">Change Nickname</button>
+                  <button id="nick-btn" class="w3-button w3-block w3-teal w3-section w3-padding" type="submit">Change Nickname</button>
                 </div>
               </div>
             </div>
@@ -94,7 +94,7 @@
               <div class="w3-container">
                 <div class="w3-section">
                   <h2>Are you sure to logout?</h2>
-                  <button id="logout-btn" class="w3-button w3-block w3-green w3-section w3-padding">Logout!!!</button>
+                  <button id="logout-btn" class="w3-button w3-block w3-teal w3-section w3-padding">Logout!!!</button>
                 </div>
               </div>
             </div>
@@ -114,7 +114,7 @@
                 <label><b>New Group Name</b></label>
                 <input id="addgroup-n" class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter New Group Name" name="grpname" required>
                 <label id="addgroup-msg"></label>
-                <button id="addgroup-btn" class="w3-button w3-block w3-green w3-section w3-padding">Add Group</button>
+                <button id="addgroup-btn" class="w3-button w3-block w3-teal w3-section w3-padding">Add Group</button>
               </div>
             </div>
           </div>
